--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -155,11 +155,9 @@
                 app:drawableStartCompat="@drawable/ic_baseline_face_24"
                 />
 
-
             <Space
                 android:layout_width="wrap_content"
                 android:layout_height="14dp" />
-
 
             <TextView
                 android:layout_width="wrap_content"
@@ -207,6 +205,10 @@
                 android:drawablePadding="10dp"
                 android:text=""
                 app:drawableStartCompat="@drawable/ic_baseline_email_24"/>
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="44dp" />
 
             <TextView
                 android:layout_width="wrap_content"
