--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,9 +18,9 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="110dp"
+                    android:layout_height="150dp"
                     android:background="@color/blue"
-                    android:src="@drawable/logo"
+                    android:src="@drawable/appartamentologo"
                     />
 
                 <Space
