--- a/app/src/main/res/drawable/logo.xml
+++ b/app/src/main/res/drawable/logo.xml
@@ -1,62 +1,62 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="1080dp"
-    android:height="1080dp"
-    android:viewportWidth="1080"
-    android:viewportHeight="1080">
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="1000"
+    android:viewportHeight="1000">
   <path
       android:pathData="M315,247.5c-51.6,8.8 -93.2,47.3 -104.9,97.2 -6,25.8 -4.8,49 4,74 5,14.1 11.5,25.6 21.1,37.4l4.6,5.6 -71.5,71.4c-39.3,39.3 -72.1,72.6 -72.9,74.1 -3,5.7 -1.1,13.5 4.2,17.7 3,2.4 11,2.9 14.7,1 1.2,-0.6 34.7,-33.5 74.4,-73.2l72.2,-72.1 5.8,3.6c23.5,14.4 46.3,20.4 73.8,19.5 20.3,-0.7 33.9,-4.1 52,-13.1 15,-7.5 23.8,-13.8 35.1,-25.2 17.6,-17.8 29.5,-40.3 35,-65.9 2.3,-11.1 2.3,-37.9 0,-49 -8.8,-41.1 -34.1,-73.7 -71.1,-91.6 -13,-6.3 -21.9,-9.1 -36,-11.4 -10.8,-1.8 -30.1,-1.8 -40.5,-0zM354,275.2c31.7,5.9 58.3,26.2 72.5,55.3 8.3,16.8 10,24.5 10,44.5 -0.1,19.3 -1.8,27.4 -9.1,42.9 -25.5,54.1 -91.1,74.8 -142.6,44.9 -36.7,-21.2 -56.6,-63.5 -49.3,-105.1 9.6,-55.3 63.6,-92.9 118.5,-82.5z"
       android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:strokeColor="#000000"/>
   <path
       android:pathData="M320.4,315.4c-8.2,6.7 -25.5,20.9 -38.4,31.5 -12.9,10.6 -23.7,19.7 -23.8,20.2 -0.5,1.2 6.6,9.9 7.9,9.9 0.6,-0 16,-12.3 34.2,-27.3 18.3,-15 33.8,-27.6 34.4,-28.1 0.8,-0.4 14,9.8 36,27.9l34.7,28.5 2.3,-2.7c1.3,-1.6 3.2,-4 4.3,-5.4l2,-2.6 -15.3,-12.5c-8.3,-6.9 -25.6,-21 -38.2,-31.5 -12.7,-10.4 -23.5,-19.2 -24.1,-19.6 -0.6,-0.3 -7.8,4.9 -16,11.7z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M310.2,354.8l-25.2,20.7 0,26.8 0,26.7 17.8,-0.2 17.7,-0.3 0.1,-18c0,-9.9 0.1,-21.7 0.2,-26.3l0.2,-8.2 15,-0 15,-0 0,26.5 0,26.5 17.5,-0 17.5,-0 0,-26.8 0,-26.7 -24.1,-20c-13.3,-11 -24.7,-20.3 -25.4,-20.7 -0.7,-0.4 -10.9,7.3 -26.3,20z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M483.8,357.6c-0.5,0.4 -0.8,13.5 -0.8,29.1l0,28.3 6,-0 6,-0 0,-9.4 0,-9.4 8.3,-0.3c7.1,-0.3 9,-0.8 12.5,-3.2 5.2,-3.4 8.2,-9.1 8.2,-15.6 0,-6.1 -1.3,-9.7 -4.8,-13.4 -4.9,-5.2 -7.7,-6.1 -21.7,-6.5 -7.1,-0.2 -13.3,-0.1 -13.7,0.4zM510.1,370.9c3.7,3.7 3.8,7.8 0.4,11.5 -2.1,2.3 -3.2,2.6 -9,2.6l-6.5,-0 0,-8.5 0,-8.5 6.1,-0c5.4,-0 6.4,0.3 9,2.9z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M532,385.9l0,29.1 5.5,-0 5.5,-0 0,-9.5 0,-9.5 7.3,-0c9.2,-0 14.5,-2.3 18.6,-8.1 2.7,-3.6 3.1,-5 3.1,-10.6 0,-8.5 -2.5,-13.3 -8.7,-17 -4.4,-2.6 -5.7,-2.8 -18,-3.1l-13.3,-0.4 0,29.1zM556.3,369.2c5.3,2.8 6.4,9.2 2.2,13.3 -2.1,2.2 -3.3,2.5 -9,2.5l-6.5,-0 0,-8.5 0,-8.5 5.6,-0c3,-0 6.5,0.5 7.7,1.2z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M666.5,364c-4.8,1.6 -5,1.8 -5.3,5.8 -0.3,4.1 -0.4,4.2 -3.8,4.2l-3.4,-0 0,5 0,5 3.4,-0 3.4,-0 0.4,11.2c0.6,16.5 3,19.8 14.3,19.8l5.5,-0 0,-5c0,-5 0,-5 -3.3,-5 -5.1,-0 -5.7,-1.3 -5.7,-11.7l0,-9.3 4.5,-0 4.5,-0 0,-5 0,-5 -4.5,-0 -4.4,-0 -0.3,-5.8 -0.3,-5.9 -5,1.7z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M911.8,363.9c-4.8,1.4 -4.8,1.5 -4.8,5.8 0,4.3 0,4.3 -3.5,4.3l-3.5,-0 0,5 0,5 3.5,-0 3.5,-0 0,12c0,11.8 0,12 2.9,15.2 2.5,2.9 3.5,3.2 9.5,3.6l6.6,0.4 0,-5.1 0,-5.1 -3.3,-0c-5.1,-0 -5.7,-1.3 -5.7,-11.7l0,-9.3 4.5,-0 4.5,-0 0,-4.9 0,-5 -4.2,-0.3 -4.3,-0.3 -0.5,-5.6 -0.5,-5.5 -4.7,1.5z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M585.5,374.9c-7.8,4.8 -10.8,10.3 -10.8,19.6 -0.1,13.1 9.8,22.6 22,21.2 2.5,-0.3 5.8,-1.4 7.4,-2.6 3.5,-2.6 3.9,-2.6 3.9,-0.1 0,1.7 0.7,2 5,2l5,-0 0,-20.5 0,-20.5 -5,-0c-3.8,-0 -5,0.4 -5,1.5 0,1.9 -0.3,1.9 -4.2,-0.5 -4.4,-2.7 -14.1,-2.7 -18.3,-0.1zM602,384.7c5.2,3.6 6.8,8.4 4.5,13.8 -4,9.7 -17.7,9.3 -20.6,-0.5 -1.5,-5 -0.5,-8.6 3.3,-12.2 3.5,-3.3 8.9,-3.8 12.8,-1.1z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M645,373.7c-0.8,0.3 -2.7,1.7 -4.2,3.1l-2.8,2.6 0,-2.7c0,-2.6 -0.2,-2.7 -5,-2.7l-5,-0 0,20.5 0,20.5 5,-0 5,-0 0,-11c0,-7.7 0.4,-12 1.4,-13.9 1.6,-3 5.3,-5.1 9.1,-5.1 2.4,-0 2.5,-0.3 2.5,-6 0,-5.6 -0.2,-6 -2.2,-5.9 -1.3,-0 -3,0.3 -3.8,0.6z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M696,375.1c-7.2,4.4 -10.3,10.3 -10.3,19.4 -0.1,13.1 9.8,22.6 22,21.2 2.5,-0.3 5.8,-1.4 7.4,-2.6 3.5,-2.6 3.9,-2.6 3.9,-0.1 0,1.7 0.7,2 5,2l5,-0 0,-20.5 0,-20.5 -5,-0c-3.8,-0 -5,0.4 -5,1.5 0,1.9 -0.3,1.9 -4.2,-0.5 -4.6,-2.8 -14.1,-2.7 -18.8,0.1zM712.8,384.4c7.9,4.1 7.3,15.9 -0.9,20.2 -6.2,3.2 -14.1,-1.1 -15.5,-8.2 -1.7,-9.3 8,-16.3 16.4,-12z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M752.3,375c-2.7,1.6 -3.3,1.7 -3.3,0.5 0,-1.1 -1.2,-1.5 -5,-1.5l-5,-0 0,20.5 0,20.5 5,-0 5,-0 0,-13.4c0,-12 0.2,-13.6 2.1,-16 1.4,-1.8 3,-2.6 5.2,-2.6 6.5,-0 7.7,3 7.7,19.6l0,12.4 4.9,-0 4.9,-0 0.4,-13.9c0.3,-15.7 1.3,-18.1 7.2,-18.1 6.4,-0 7.6,3.1 7.6,19.6l0,12.4 5,-0 5,-0 0,-15.5c0,-17.4 -1.1,-21.4 -6.8,-24.8 -4.5,-2.6 -13,-2.3 -17.4,0.7l-3.4,2.3 -2.8,-2.3c-3.6,-3.1 -11.6,-3.3 -16.3,-0.4z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M817.1,375.2c-12.1,6 -14.6,24.4 -4.7,34.4 6.2,6.3 15.5,8.1 24.7,4.9 4.5,-1.6 8.9,-5 8.9,-6.9 0,-0.6 -1.8,-2.1 -4,-3.4l-4.1,-2.3 -2.6,2.1c-5.4,4.2 -17.3,1.1 -17.3,-4.6 0,-0.2 6.7,-0.4 14.9,-0.4l14.9,-0 0.4,-2.5c0.8,-4 -1,-11.6 -3.6,-15.6 -5.1,-7.6 -18.2,-10.3 -27.5,-5.7zM834.2,384.7c1.1,1 2.4,2.6 2.9,3.5 0.9,1.7 0.2,1.8 -9.6,1.8 -10.4,-0 -10.5,-0 -9.5,-2.1 3,-5.5 11.7,-7.3 16.2,-3.2z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M869.8,374.9c-3.1,2.5 -4.2,2.7 -3.4,0.6 0.4,-1.2 -0.5,-1.5 -4.9,-1.5l-5.5,-0 0,20.5 0,20.5 4.9,-0 4.9,-0 0.4,-13.5c0.3,-12.8 0.5,-13.6 2.8,-15.9 3.7,-3.6 8.8,-3.8 12,-0.6 1.8,1.8 2,3.3 2,16l0,14 5.5,-0 5.5,-0 0,-15c0,-16.4 -0.7,-19.7 -5.4,-24 -2.2,-2 -4,-2.5 -9.4,-2.8 -5.6,-0.3 -7.1,-0.1 -9.4,1.7z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
   <path
       android:pathData="M942.5,374.7c-7.9,4.1 -11.9,10.8 -11.8,20 0.2,27 39.2,28.8 42.9,2 1.2,-8.7 -3.5,-17.6 -11.7,-21.8 -4.8,-2.4 -15,-2.5 -19.4,-0.2zM957,384.5c6.4,3.3 7.8,11.4 2.9,17 -2.7,3 -3.7,3.5 -7.4,3.5 -11.3,-0 -15.6,-14.3 -6.1,-20.1 3.8,-2.3 6.7,-2.4 10.6,-0.4z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#FFFFFF"/>
 </vector>
