--- a/app/src/main/res/layout/activity_new_insertion.xml
+++ b/app/src/main/res/layout/activity_new_insertion.xml
@@ -18,11 +18,10 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="110dp"
+                android:layout_height="150dp"
                 android:background="@color/blue"
-                android:src="@drawable/logo"
+                android:src="@drawable/appartamentologo"
                 />
-
 
             <TextView
                 android:layout_width="wrap_content"
