--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -18,7 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:background="@color/blue"
-                android:src="@drawable/appartamentologo"
+                android:src="@drawable/logoapp"
                 />
 
             <Space
