--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,9 +19,9 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="110dp"
+                android:layout_height="150dp"
                 android:background="@color/blue"
-                android:src="@drawable/logo"
+                android:src="@drawable/logoapp"
                 />
 
             <Space
