--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
                 android:background="@color/white"
                 android:layout_margin="10dp"
                 android:drawablePadding="10dp"
-                android:hint="Inserisci il tuo username"
+                android:hint="Inserisci username"
                 android:padding="10dp"
                 android:text=""
                 android:textColorHint="@color/black"
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:id="@+id/passw"
-                android:hint="Inserisci la tua password"
+                android:hint="Inserisci password"
                 android:textColorHint="@color/black"
                 android:background="@color/white"
                 android:layout_margin="10dp"
