--- a/app/src/main/res/layout/activity_change.xml
+++ b/app/src/main/res/layout/activity_change.xml
@@ -254,32 +254,35 @@
                 android:layout_height="14dp" />
 
             <ImageView android:id="@+id/newpictureImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:maxHeight="300px"
-                android:maxWidth="300px"
-                android:minHeight="300px"
-                android:minWidth="300px"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:maxHeight="400px"
+                android:maxWidth="400px"
+                android:minHeight="400px"
+                android:minWidth="400px"
+                android:layout_gravity="center"
                 android:scaleType="centerInside"
                 android:adjustViewBounds="true"/>
 
-            <!-- Bisogna cambiare id??? -->
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="14dp" />
 
             <Button
                 android:id="@+id/fpick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:text="Seleziona foto"
+                android:layout_gravity="center"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
             <Button
                 android:id="@+id/fpickRemove"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:backgroundTint="@color/red"
                 android:text="Rimuovi foto"
+                android:layout_gravity="center"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
