--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
                 android:background="@color/blue"
-                android:src="@drawable/logoapp"
+                android:src="@drawable/applogo"
                 />
 
             <Space
